<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lvPanelTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">


        <EditText
            android:id="@+id/etTitleTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etDescriptionTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text"
            android:textSize="12dp"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/calendar"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/txtSelectDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agendTask"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/alarm"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/txtSelectAlarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createAlarm"/>

        </LinearLayout>



    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lvPanelTitle"
        android:padding="10dp"
        android:gravity="end">

        <TextView
            android:id="@+id/txtCancelTaskNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/TextButtonDialog"/>


        <TextView
            android:id="@+id/txtSaveTaskNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            style="@style/TextButtonDialog"/>


    </LinearLayout>


</RelativeLayout>