<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lvPanelTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:gravity="right">

            <ImageButton
                android:id="@+id/ibCompleteTask"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:src="@drawable/completed"
                android:background="@android:color/transparent"/>

            <ImageButton
                android:id="@+id/ibDeleteTask"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:src="@drawable/trash"
                android:background="@android:color/transparent"/>

        </LinearLayout>



        <EditText
            android:id="@+id/etTitleTaskEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etDescriptionTaskEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="12dp"
            android:hint="@string/description"
            android:inputType="text"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/calendar"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/txtSelectDateEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agendTask"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/alarm"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/txtSelectAlarmEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createAlarm"/>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/lvPanelTitle"
        android:padding="10dp"
        android:gravity="end">

        <TextView
            android:id="@+id/txtCancelTasEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            style="@style/TextButtonDialog"/>


        <TextView
            android:id="@+id/txtEditTaskEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            style="@style/TextButtonDialog"/>


    </LinearLayout>


</RelativeLayout>